[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspaceweather"
description = "A Python wrapper for the Australian Bureau of Meteorology's Space Weather API."
authors = [
    { name = "Ben Nour", email = "hello@ben-nour.com" }]
version = "0.1.0"
dependencies = [
    "requests~=2.32.3"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["spaceweather", "space", "wrapper"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/ben-n93/pyspaceweather"
repository = "https://github.com/ben-n93/pyspaceweather"
documentation = "https://py-spaceweather.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["pyspaceweather"]